Allow configuring endpoint for Azure FS